# unitTestLauncher

./: .clang-format  CMakeLists.txt  DockerFolderTestGenCfg  Dockerfile  README.md  common_utils.py  generate_test_units.py  path_cfg.yml  path_config_loader.py  project.yml  run_docker.py  swCmpBuildCheck.py  unitTestsLauncher.py  unit_tests_paths.yml
utExecutionAndResults/utResults/: total_result_report.txt
utExecutionAndResults/utResults/BuildTblResults/artifacts/gcov/gcovr/: GcovCoverage.json  GcovCoverageResults.BuildTbl.c.bfb948f4d23b4bff4879de21ec699a5b.html  GcovCoverageResults.functions.html  GcovCoverageResults.html  coverage.txt
utExecutionAndResults/utResults/BuildTblResults/gcov/results/: test_BuildTbl.pass
utExecutionAndResults/utResults/BuildTblResults/test/dependencies/: BuildTbl.d  test_BuildTbl.d  test_BuildTbl_runner.d  unity.d
utExecutionAndResults/utResults/BuildTblResults/test/preprocess/files/test_BuildTbl/: test_BuildTbl.c
utExecutionAndResults/utResults/BuildTblResults/test/preprocess/files/test_BuildTbl/directives_only/: test_BuildTbl.c
utExecutionAndResults/utResults/BuildTblResults/test/preprocess/files/test_BuildTbl/full_expansion/: test_BuildTbl.c
utExecutionAndResults/utResults/BuildTblResults/test/preprocess/includes/test_BuildTbl/: test_BuildTbl.c.yml
utExecutionAndResults/utResults/BuildTblResults/test/runners/: test_BuildTbl_runner.c
